# webserv

./: .gdbinit  .gitignore  CMakeLists.txt  Makefile  allowed_fun.txt  main.cpp
include/: webserv.hpp
resources/: webserv.conf
resources/web/: index.html
src/: main.cpp
src/app/: Client.cpp  Client.hpp  Server.cpp  Server.hpp  TCPServer.cpp  TCPServer.hpp  Worker.cpp  Worker.hpp
src/http/: HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp
src/utils/: Parser.cpp  Parser.hpp
